Updated Pineapple slide text color

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -9,6 +9,10 @@
   margin-top: 20px;
 }
 
+.pineapple-slide .slider-content-text {
+  color: #2f2c2c !important;
+}
+
 .slides-title {
   font-size: 20px !important;
 }
