--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -14,6 +14,10 @@
   font-size: 24px;
 }
 
+.heading-text {
+  color: #2f2c2c !important;
+}
+
 .slides-title {
   font-size: 20px !important;
 }
@@ -65,6 +69,10 @@
   .pineapple-slide .slider-content-text {
       font-size: 18px;
       text-align: left;
+  }
+
+  .case-item {
+    height: 400px;
   }
 }
 
