Update header styling

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -55,6 +55,10 @@
 }
 
 @media (max-width: 768px) {
+  .header-spacer {
+    height: 25px;
+  }
+
   .slider-content {
     padding-left: 30px !important;
     padding-right: 30px !important;
