--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -2,36 +2,21 @@
     float: right !important;
 }
 
+.featured-work-title {
+  font-size: 20px;
+  font-weight: bold !important;
+}
+
 .contacts .title {
   font-size: 18px !important;
 }
 
-.pineapple {
-  display: block !important;
-  text-align: center !important;
-  padding: 10px;
-  margin-top: 20px;
-}
-
-.pineapple-slide .slider-content-text {
-  text-align: center;
-  margin: 100px;
-  color: #2f2c2c !important;
-  font-size: 24px;
-}
-
-.pineapple-slide .slider-image {
-  width: 100%;
-  margin-left: 10%;
-  margin-top: -90px;
+.intro-pineapple {
+  margin: 30px;
 }
 
 .main-slider .slider-content .slider-content-text {
   margin-bottom: 0px !important;
-}
-
-.heading-text {
-  color: #2f2c2c !important;
 }
 
 .slides-title {
@@ -75,6 +60,11 @@
 }
 
 @media (max-width: 768px) {
+  .seo-slide, .marketing-slide, .conversion-slide, .ecommerce-slide {
+    padding-top: 80px;
+  }
+
+
   .header-spacer {
     height: 25px;
   }
@@ -92,16 +82,10 @@
     text-align: left;
   }
 
-  .pineapple-slide .slider-content-title {
-    text-align: center;
-  }
+
 }
 
 @media (max-width: 640px) {
-  .pineapple-slide .slider-content-text {
-      font-size: 18px;
-      text-align: left;
-  }
 
   .case-item {
     height: 400px;
@@ -123,12 +107,13 @@
 }
 
 @media (max-width: 375px) {
-  .pineapple img {
-    max-width: 40%;
+
+  .main-slider {
+    padding-bottom: 0px;
   }
 
-  .main-slider .slider-content .slider-content-text {
-    margin-top: 40px;
+  .top-slide {
+    height: 580px !important;
   }
 
   .main-slider-btn-wrap {
@@ -137,13 +122,5 @@
 
   .slider-image {
     display: none;
-  }
-
-  .swiper-container {
-    height: 480px;
-  }
-
-  .top-slide {
-    height: 400px !important;
   }
 }
